update strategy object
